[package]
name = "ac215"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.8.4"
bitflags = "2"
chrono = "0.4"
etherparse = "0.16"
heapless = "0.9.2"
hex = "0.4.3"
pcap-parser = "0.16"
ractor = "0.15"
tokio = { version = "1.50.0", features = [
    "io-util",
    "macros",
    "net",
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
] }

[[bin]]
name = "pcapdump"
path = "src/bin/pcapdump.rs"

[[bin]]
name = "demo"
path = "src/bin/demo.rs"

[[bin]]
name = "demo-panel"
path = "src/bin/demo-panel.rs"

[[bin]]
name = "proxy"
path = "src/bin/proxy.rs"
