[package]
name = "ac215"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.8.4"
env_logger = { version = "0.11", features = ["kv"] }
log = { version = "0.4", features = ["kv_serde"] }
bitflags = "2"
chrono = "0.4"
etherparse = "0.16"
heapless = "0.9.2"
hex = "0.4.3"
hmac = "0.12"
sha2 = "0.10"
rusqlite = { version = "0.35", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1", features = ["v4"] }
pcap-parser = "0.16"
ractor = "0.15"
axum = { version = "0.8", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiberius = { version = "0.12", default-features = false, features = ["rustls", "tds73"] }
tokio-util = { version = "0.7", features = ["compat"] }
clap = { version = "4", features = ["derive"] }
opentelemetry = { version = "0.31", features = ["logs"] }
opentelemetry_sdk = { version = "0.31", features = ["logs"] }
opentelemetry-appender-log = "0.31"
opentelemetry-otlp = { version = "0.31", features = ["http-proto", "logs", "reqwest-blocking-client", "reqwest-rustls"] }
toml = "0.8"
windows-service = "0.7"
tokio = { version = "1.50.0", features = [
    "io-std",
    "io-util",
    "macros",
    "net",
    "rt",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }

[[bin]]
name = "pcapdump"
path = "src/bin/pcapdump.rs"

[[bin]]
name = "demo"
path = "src/bin/demo.rs"

[[bin]]
name = "demo-panel"
path = "src/bin/demo-panel.rs"

[[bin]]
name = "proxy"
path = "src/bin/proxy/main.rs"
